fixing the look on small screens

--- a/sass/__resets.scss
+++ b/sass/__resets.scss
@@ -10,8 +10,6 @@ html {
 }
 
 body {
-   // position: relative;
-   // height: 100%;
-   padding-bottom: 100px;
+   padding: 0 10px 100px 10px;
    font-family: Arial, sans-serif;
 }
